kube/ingress-plants.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-plants
  namespace: plants
  annotations:
      cert-manager.io/cluster-issuer: "letsencrypt-prod"
      nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - plants.lines14.site
    secretName: letsencrypt-prod
  rules:
  - host: plants.lines14.site
    http:
      paths:
      - path: /?(.*)
        pathType: Exact
        backend:
          service:
            name: plants
            port:
              number: 83
